force-app/main/default/objects/Project_Proposal__c/Project_Proposal__c.object-meta.xml
<CustomObject>
    <description>No SOX Impact - No Permissions to be provided on this Object as it is not in use.</description>
    <label>(Deprecated) Project Proposal</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>(Deprecated) Project Proposals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>