force-app/main/default/objects/Project_Proposal__c/fields/Approved_POR_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Approved_POR_Quarter__c</fullName>
    <label>Approved POR Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>