force-app/main/default/objects/Project_Proposal__c/fields/Current_Organization__c.field-meta.xml
<CustomField>
    <fullName>Current_Organization__c</fullName>
    <label>Current Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>G&amp;A</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Product Operations</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Workplace Technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>