force-app/main/default/objects/Project_Proposal__c/fields/Enteprise_Function_Rank__c.field-meta.xml
<CustomField>
    <fullName>Enteprise_Function_Rank__c</fullName>
    <label>Enteprise Function Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>