force-app/main/default/objects/Project_Proposal__c/fields/Enterprise_Function__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Function__c</fullName>
    <label>Enterprise Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Order to Cash</fullName>
            </value>
            <value>
                <fullName>Pipeline Generation</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>Scale the company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>