force-app/main/default/objects/Project_Proposal__c/fields/Estimated_Pre_POR_Quarter_Q1_Q2_Q3_Q__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Pre_POR_Quarter_Q1_Q2_Q3_Q__c</fullName>
    <label>Estimated Pre POR Quarter (Q1,Q2,Q3,Q4)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>