force-app/main/default/objects/Project_Proposal__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>