force-app/main/default/objects/Project_Proposal__c/fields/IT_Owner__c.field-meta.xml
<CustomField>
    <fullName>IT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals</relationshipName>
    <type>Lookup</type>
</CustomField>