force-app/main/default/objects/Project_Proposal__c/fields/Organization_Rank__c.field-meta.xml
<CustomField>
    <fullName>Organization_Rank__c</fullName>
    <label>Organization Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>