force-app/main/default/objects/Project_Proposal__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <label>POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>