force-app/main/default/objects/Project_Proposal__c/fields/Proposed_Organization__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Organization__c</fullName>
    <label>Proposed Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Product Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Workspace Tools</fullName>
            </value>
            <value>
                <fullName>Workplace Technologies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>