force-app/main/default/objects/Project_Proposal__c/fields/Software_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Software_Expenses__c</fullName>
    <label>Software Expenses</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>