force-app/main/default/objects/Project_Proposal__c/fields/Strategic_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Initiative__c</fullName>
    <label>Strategic Initiative</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Growth</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Scale the Company</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Scale the company &amp; revenue growth</fullName>
            </value>
            <value>
                <fullName>IT Efficiency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>