force-app/main/default/objects/Project_Proposal__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Software_Expenses__c +  Resource_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>