force-app/main/default/objects/Project_Proposal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Enterprise_Function__c</columns>
    <columns>Strategic_Initiative__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>